# raylib_axe_game

./: .gitignore  CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp
